force-app/main/default/objects/ID_Card_Request__c/ID_Card_Request__c.object-meta.xml
<CustomObject>
    <label>ID_Card_Request</label>
    <nameField>
        <label>ID_Card_Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ID_Card_Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>