force-app/main/default/objects/ID_Card_Request__c/fields/Photo_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Photo_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photo Uploaded</label>
    <type>Checkbox</type>
</CustomField>