force-app/main/default/objects/ID_Card_Request__c/fields/Request_No__c.field-meta.xml
<CustomField>
    <fullName>Request_No__c</fullName>
    <label>Request No</label>
    <type>AutoNumber</type>
</CustomField>