force-app/main/default/objects/ID_Card_Request__c/fields/Student1__c.field-meta.xml
<CustomField>
    <fullName>Student1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student1</label>
    <referenceTo>Student1__c</referenceTo>
    <relationshipLabel>ID_Card_Requests</relationshipLabel>
    <relationshipName>ID_Card_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>