force-app/main/default/objects/ID_Card_Request__c/validationRules/Issue_Date_cannot_be_before_Request_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Issue_Date_cannot_be_before_Request_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Issue_Date__c &lt; Request_Date__c</errorConditionFormula>
    <errorMessage>Issue Date cannot be before Request Date.</errorMessage>
</ValidationRule>