force-app/main/default/objects/ID_Card_Request__c/validationRules/Issue_Date_required_when_Status_is_Issue.validationRule-meta.xml
<ValidationRule>
    <fullName>Issue_Date_required_when_Status_is_Issue</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;Issued&quot;),
ISBLANK(Issue_Date__c)
)</errorConditionFormula>
    <errorMessage>Enter Issue Date.</errorMessage>
</ValidationRule>