force-app/main/default/objects/ID_Card_Request__c/validationRules/Photo_must_be_uploaded.validationRule-meta.xml
<ValidationRule>
    <fullName>Photo_must_be_uploaded</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(Photo_Uploaded__c)</errorConditionFormula>
    <errorMessage>Upload student photo.</errorMessage>
</ValidationRule>